correction in index file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="logo">Creative Tim</a>
                 <nav class="top-menu">
                     <a href="#components">Components</a>
-                    <a href="#components"><img src="icon.png" alt="download">
+                    <a href="#components"><img src="ICON.png" alt="download">
                      Download</a>
 
                      <a href="#twitter">
