added corrections in media

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         <body>
             <header>
                 <a href="logo">Creative Tim</a>
+                <a href="#" class="dropdown">
+                  <svg width="22" height="14" viewBox="0 0 22 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="22" height="2" fill="white"/>
+                    <rect y="6" width="22" height="2" fill="white"/>
+                    <rect y="12" width="22" height="2" fill="white"/>
+                    </svg>
+                  </a>
                 <nav class="top-menu">
+                  
                     <a href="#components">Components</a>
                     <a class="download" href="#components"><img src="ICON.png" alt="download">
                      Download</a>
